<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/buttonShowBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_buttonShowBrowser"
        android:text="@string/buttonShowBrowser_text" />

    <Button
        android:id="@+id/buttonCallPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_buttonCallPhoneNumber"
        android:text="@string/buttonCallPhoneNumber_text" />

    <Button
        android:id="@+id/buttonShowActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_buttonShowActivity"
        android:text="@string/buttonShowActivity_text" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_buttonFinish"
        android:text="@string/buttonFinish_text" />
</LinearLayout>